Fix for jumping edit area
- Removed v-if from Toolbar.vue;
- Refined c-toolbar styling;
- TODO: don't include toolbar component when not editing, and for
components that don't use a toolbar;

--- a/src/styles-new/_controls.scss
+++ b/src/styles-new/_controls.scss
@@ -389,7 +389,10 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .c-toolbar {
-    height: 24px; // Need to standardize the height
+    $p: $interiorMargin;
+    border-top: 1px solid $colorInteriorBorder;
+    height: $p + 24px; // Need to standardize the height
+    padding-top: $p;
 
     .c-click-icon {
         @include cControl();
